--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,5 +92,53 @@ body {
     text-align: center;
     padding: 15px;
 }
+.price-btn-container {
+    margin-bottom: 20px;
+}
 
+.btn-container {
+    text-align: center;
+    margin: 10px;
+}
 
+.price-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center; /* Centers text both horizontally and vertically */
+    padding: 0; /* Remove padding as we're using fixed width/height */
+    background-color: #f1c40f;
+    color: white;
+    text-align: center;
+    border-radius: 10px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background-color 0.3s;
+    width: 100px; /* Set width */
+    height: 100px; /* Set height for a square shape */
+    font-size: 14px; /* Adjust text size to fit inside the square */
+}
+
+.price-btn:hover {
+    background-color: #d4ac0d;
+}
+
+.custom-price input[type="number"] {
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    width: 80px;
+}
+
+.custom-price button[type="submit"] {
+    padding: 5px 10px;
+    background-color: #e67e22;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.custom-price button[type="submit"]:hover {
+    background-color: #d35400;
+}
