--- a/views/partials/productList.ejs
+++ b/views/partials/productList.ejs
@@ -34,6 +34,7 @@
     <ul class="dropdown-menu" aria-labelledby="sortButton">
       <li><a class="dropdown-item" href="/products/<%= Category %>/sort-hightolow/<%= page %>">High to Low</a></li>
       <li><a class="dropdown-item" href="/products/<%= Category %>/sort-lowtohigh/<%= page %>">Low to High</a></li>
+      <li><a class="dropdown-item" href="/products/<%= Category %>/newlyListed/<%= page %>">Newly Listed</a></li>
     </ul>
   </div>
 
