--- a/views/partials/productdetails.ejs
+++ b/views/partials/productdetails.ejs
@@ -33,7 +33,7 @@
                 src="<%= product.picture.imgUrl %>" 
                 alt="<%= product.name %>" 
                 class="img-fluid rounded" 
-                style="max-width: 100%; max-height: 100%; object-fit: contain;">
+                style="width: 500px; height: 400px; object-fit: cover; border-radius: 10px;">
         </div>
         
     </div>
@@ -41,4 +41,3 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </div>
-
