seller details added along with their products

--- a/views/partials/productdetails.ejs
+++ b/views/partials/productdetails.ejs
@@ -23,6 +23,9 @@
                     <h3>Seller Information</h3>
                     <p><strong>Name:</strong> <%= product.seller.name %></p>
                     <p><strong>Username:</strong> <%= product.seller.username %></p>
+                    <a href="/sellerdetails/<%= product.seller._id %>"><button class = "btn btn-primary">
+                        More by seller
+                    </button></a>
                 </div>
             </div>
         </div>
