--- a/views/partials/sign-in.ejs
+++ b/views/partials/sign-in.ejs
@@ -1,4 +1,4 @@
-<form action="" method="POST" >
+<form action="/register" method="POST" >
     <div class="mb-3">
         <label for="username" class="form-label">username</label>
         <input name="username" type="text" class="form-control"  required>
