order routes and readProfile styling

--- a/views/success.ejs
+++ b/views/success.ejs
@@ -11,5 +11,6 @@
     <h1>Thank you, <%= name %>!</h1>
     <p>Your order has been placed successfully.</p>
     <a href="/">Go Back</a>
+    <a href="/your-order"> Orders Details</a>
 </body>
 </html>
