--- a/views/basiclayout.ejs
+++ b/views/basiclayout.ejs
@@ -15,7 +15,7 @@
     background-color: #f4f4f4;
   }
   .navbar {
-    background-color: #2c3e50;
+    background-color: #000000;
   }
   .navbar-brand img {
     height: 40px;
@@ -24,7 +24,7 @@
     color: #ecf0f1 !important;
   }
   .navbar .nav-link:hover {
-    color: #3498db !important;
+    color: #b1f1c8 !important;
   }
   .search-bar {
     width: 250px;
