--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -41,6 +41,9 @@
       <h4>Total: $<%= totalAmount.toFixed(2) %></h4>
       <a href="/checkout" class="btn btn-primary">Checkout</a>
   </div>
+
+   <button>    <a href="/your-orders">all Orders Details</a>
+   </button>
 </div>
   <script>
         // Wait for the DOM to be ready
