--- a/views/checkoutForm.ejs
+++ b/views/checkoutForm.ejs
@@ -47,11 +47,11 @@
             <li class="list-group-item">
               <strong><%= product.name %></strong> 
               
-              - Price: $<%= product.price %>
+              - Price: PKR<%= product.price %>
             </li>
           <% }) %>
         </ul>
-        <p><strong>Total: $<%= totalAmount %></strong></p>
+        <p><strong>Total: PKR<%= totalAmount %></strong></p>
       <% } else { %>
         <p>No items in your cart.</p>
       <% } %>
