--- a/views/readProfile.ejs
+++ b/views/readProfile.ejs
@@ -26,7 +26,7 @@
                                 <!-- Product Description -->
                                 <h5><%= product.description %></h5>
                                 <div class="prod-price">
-                                    <h5 class="card-title"><%= product.price %></h5>
+                                    <h5 class="card-title">PKR:<%= product.price %></h5>
                                     
                                 </div>
                                 <div>
