--- a/views/partials/loginform.ejs
+++ b/views/partials/loginform.ejs
@@ -1,23 +1,20 @@
 <div class="container mt-5">
-    <h2>Login</h2>
+  <h2 class="text-light">Login</h2>
 
+  <!-- Login Form -->
+  <form action="/login" method="POST" class="form-container">
+    <h3>Login</h3>
 
-    <!-- Login Form (you can add your login form here) -->
-    <form action="/login" method="POST">
       <div class="mb-3">
-        <label for="username" class="form-label">Username</label>
-        <input type="text" class="form-control" id="email" name="username" required>
+          <label for="username" class="form-label text-light">Username</label>
+          <input type="text" class="form-control form-control-dark" id="email" name="username" required>
       </div>
 
       <div class="mb-3">
-        <label for="password" class="form-label">Password</label>
-        <input type="password" class="form-control" id="password" name="password" required>
+          <label for="password" class="form-label text-light">Password</label>
+          <input type="password" class="form-control form-control-dark" id="password" name="password" required>
       </div>
 
-      <button type="submit" class="btn btn-primary">Login</button>
-      
-      
-      
-    </form>
-  </div>
-  
+      <button type="submit" class="btn btn-dark">Login</button>
+  </form>
+</div>
