--- a/views/partials/sign-in.ejs
+++ b/views/partials/sign-in.ejs
@@ -1,5 +1,8 @@
+<style></style>
 <form action="/register" method="POST" >
+<h3>Register</h3>
     <div class="mb-3">
+
         <label for="username" class="form-label">username</label>
         <input name="username" type="text" class="form-control"  required>
     </div>
@@ -11,5 +14,5 @@
         <label for="name" class="form-label">Owner Name</label>
         <input  name="name" type="text" class="form-control" id="name" required>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn ">Submit</button>
 </form>
