--- a/public/css/form.css
+++ b/public/css/form.css
@@ -1,9 +1,17 @@
 /* General Form Styling */
+/* Body Styling */
+body {
+    background-color: #b0b0b0;
+}
+
 .card {
-    background-color: #f9f9f9;
+    background-color: #000000;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 15px;
     padding: 20px;
+    color: white;
+    height:460px;
+ 
 }
 
 .card-body {
@@ -11,17 +19,19 @@
 }
 
 .card h3 {
-    font-family: 'Georgia', serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    color: #4e1c1c;
+    color: #ffffff;
+    font-size: 2.2rem;
 }
 
 /* Input Fields */
 .form-control {
     border-radius: 10px;
-    border: 1px solid #c9de97; /* Soft border color */
+    border: 1px solid #ffffff; /* Soft border color */
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
     font-family: 'Georgia', serif;
+    
 }
 
 .form-control:focus {
@@ -42,13 +52,15 @@
     background-color: #6c3b3b;
     border-color: #6c3b3b;
 }
-
+.btn{
+    width: 307px;
+    padding: 15px;
+   background-color: white;
+    border: #ffffff;
+    margin-top: 30px;
+}
 /* Adjust margins for the form elements */
 .mb-3 {
     margin-bottom: 1.5rem;
 }
 
-/* Body Styling */
-body {
-    background-color: #f5f5f5;
-}
