--- a/views/partials/productList.ejs
+++ b/views/partials/productList.ejs
@@ -41,6 +41,7 @@
   <!-- Product List -->
   <div class="row mt-4">
     <% products.forEach(function(product) { %>
+      <% if(product.isAvailable) { %>
     <div class="col-md-4 col-sm-6 col-12 mb-4">
       <!-- Wrap the entire product card with an anchor tag for the product details route -->
       <a href="/details/<%= product._id %>" class="text-decoration-none">
@@ -56,6 +57,7 @@
         </div>
       </a>
     </div>
+    <% } %>
     <% }); %>
   </div>
 </div>
