--- a/views/readProfile.ejs
+++ b/views/readProfile.ejs
@@ -38,6 +38,8 @@
                     </div>
                 <% }) %>
                 <a href="/admin/add-product" class="btn btn-md btn-primary m-3">Add Products</a>
+                <a href="/your-order" class="btn btn-md btn-primary m-3">Orders placed</a>
+                <a href="/shop-order" class="btn btn-md btn-primary m-3">Order incoming </a>
             <% } else { %>
                 <h2>No products yet</h2>
                 <a href="/admin/add-product" class="btn btn-md btn-primary m-3">Add Products</a>
