--- a/views/partials/searchproducts.ejs
+++ b/views/partials/searchproducts.ejs
@@ -15,6 +15,7 @@
     <!-- Product List -->
     <div class="row mt-4">
       <% products.forEach(function(product) { %>
+        <% if(product.isAvailable) { %>}
       <div class="col-md-4 col-sm-6 col-12 mb-4">
         <!-- Wrap the entire product card with an anchor tag for the product details route -->
         <a href="/details/<%= product._id %>" class="text-decoration-none">
@@ -30,6 +31,7 @@
           </div>
         </a>
       </div>
+      <% } %>
       <% }); %>
     </div>
   </div>
