--- a/views/partials/showseller.ejs
+++ b/views/partials/showseller.ejs
@@ -37,6 +37,34 @@
       </div>
     </div>
   </div>
+  <!-- sold products section -->
+  <div class="row">
+    <div class="col-md-12">
+      <h3>Sold</h3>
+      <div class="row row-cols-1 row-cols-md-4 g-4">
+        <!-- Loop through the product array and display each product -->
+         <% if(sold) { %>
+        <% sold.forEach(function(soldproducts) { %>
+          
+            <a href="/details/<%= soldproducts._id %>" class="text-decoration-none">
+              <div class="col">
+                <div class="card product-card" style="height: 300px; background-image: url('<%= soldproducts.picture.imgUrl %>'); background-size: cover; background-position: center;">
+                  <div class="product-info d-flex flex-column justify-content-end p-3" style="background: rgba(0, 0, 0, 0.5); color: white; height: 100%;">
+                    <h5 class="card-title"><%= soldproducts.name %></h5>
+                    <p><strong>Price:</strong> $<%= soldproducts.price %></p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          
+        <% }); %>
+        <% } else { %>
+          <p> No products sold </p>
+          <% } %>
+      </div>
+    </div>
+  </div>
+
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
