now current image for edit form is shown

--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -19,7 +19,7 @@
                 <% if (product.picture) { %>
                     <div class="mb-3">
                         <label class="form-label">Current Image:</label>
-                        <img src="<%= product.image %>" alt="Product Image" width="100" />
+                        <img src="<%= product.picture.imgUrl %>" alt="Product Image" width="100" />
                     </div>
                     <% } %>
                         <!-- Product Images -->
