add prodile form fixed

--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="card shadow-lg" style="width: 28rem;">
-        <div class="card-body">
+        <div class="card-body d-flex flex-column">
             <h2 class="card-title text-center mb-4">Add Product</h2>
             <form action="/admin/products/create" method="POST" enctype="multipart/form-data">
                 <!-- Product Name -->
@@ -35,9 +35,9 @@
                         <option value="vintage">Vintage Pieces</option>
                     </select>
                 </div>
-            
-                <button type="submit" class="btn btn-primary w-100">Add Product</button>
+                <button type="submit" class="btn btn-primary w-100 mt-4">Add Product</button>
             </form>
         </div>
     </div>
 </div>
+
