order all buttons added

--- a/views/readProfile.ejs
+++ b/views/readProfile.ejs
@@ -14,9 +14,12 @@
         <div class="profile-container">
             <div class="profile_username">
                 <h1 style="font-size: 3rem;font-weight: bolder; margin:30px;color: white;"><%= user.username %>  Products</h1>
-            <div   style="display: flex; margin-left: -100px;" >
-                <a href="/admin/add-product" class="btn btn-md btn-primary m-3" style="width:522px; color: black;background-color: white;">Add Products</a>
+                <a href="/admin/add-product  " class="btn btn-md btn-primary m-3" style="width:1060px;  color: black;background-color: white;"> Add Products</a>
+
+            <div   style="display: flex; " >
+                <a href="/your-order " class="btn btn-md btn-primary m-3" style="width:522px; color: black;background-color: white;">Your Order</a>
                 <a href="/shop-order" class="btn btn-md btn-success m-3" style="width:522px; color: black;background-color: white;">Shop Orders</a></div> 
+                
             </div>
         </div>
     <% } else { %>
