--- a/views/shopOrder.ejs
+++ b/views/shopOrder.ejs
@@ -25,8 +25,8 @@
                       <td><%= order.product.name %></td>
                       <td>PKR:<%= order.product.price %></td>
                       <td><%= order.product.category %></td>
-                      <td><%= order.buyer.username %> (<%= order.buyer.email %>)</td>
-                      <td><%= new Date(order.dateOrdered).toLocaleString() %></td>
+                      <td><%= order.buyer.username %> </td>
+                      <td><%= order.orderDate %></td>
                       
 
                       <td>
