--- a/public/css/form.css
+++ b/public/css/form.css
@@ -10,7 +10,7 @@ body {
     border-radius: 15px;
     padding: 20px;
     color: white;
-    height:460px;
+
  
 }
 
@@ -58,6 +58,7 @@ body {
    background-color: white;
     border: #ffffff;
     margin-top: 30px;
+    color: black;
 }
 /* Adjust margins for the form elements */
 .mb-3 {
