under buttons work

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -92,23 +92,17 @@
     
     <div class="container mt-4">
         <div class="price-btn-container d-flex justify-content-between">
-            <!-- Button for Under $10 -->
+            <!-- Button for Under prices -->
             <div class="btn-container">
-                <a href="/products/under-10" class="price-btn">Under $10</a>
-                
-            </div>
-            
-            <!-- Button for Under $50 -->
-            <div class="btn-container">
-                <a href="/products/under-50" class="price-btn">Under $50</a>
-                
-            </div>
-            
-            <!-- Button for Under $100 -->
-            <div class="btn-container">
-                <a href="/products/under-100" class="price-btn">Under $100</a>
-                
-            </div>
+                <a href="/product/price/under-3000" class="price-btn">Under 3000 PKR</a>
+              </div>
+              <div class="btn-container">
+                <a href="/product/price/under-5000" class="price-btn">Under 5000 PKR</a>
+              </div>
+              <div class="btn-container">
+                <a href="/product/price/under-7000" class="price-btn">Under 7000 PKR</a>
+              </div>
+              
             
             <!-- Custom Price Input Form -->
             <div class="btn-container">
