--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -105,13 +105,15 @@
               
             
             <!-- Custom Price Input Form -->
+             
             <div class="btn-container">
-                <form id="customPriceForm" class="custom-price d-flex justify-content-between" method="get" action="/products/under">
+                <form id="customPriceForm" class="custom-price d-flex justify-content-between" method="get" action="/products/custom">
                     <input type="number" id="customPrice" name="price" placeholder="Enter price" min="0" required>
                     <button type="submit" class="price-btn">Filter</button>
                 </form>
                 
             </div>
+        
         </div>
     </div>
     
